--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     
     repositories {
+        maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
         google()
         mavenCentral()
     }
