--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -12,10 +12,5 @@
 			"enabled": true
 		}
 	},
-	"cordova": {},
-	"server": {
-		"hostname": "192.168.10.2:3000",
-		"iosScheme": "http",
-		"androidScheme": "http"
-	}
+	"cordova": {}
 }
