--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile": "tsc",
     "compile:watch": "tsc -w",
     "build": "next build",
-    "dev": "next dev -H 192.168.2.102",
+    "dev": "next dev",
     "lint": "eslint . --ext .ts,.tsx",
     "prettify": "prettier --write **/*.tsx",
     "preserve": "npm run build",
@@ -39,6 +39,7 @@
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "react-virtuoso": "4.7.1",
+    "swr": "2.2.5",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7"
   },
